Added payment symbol

--- a/Payments/Driver/uk_paymentsense/PAY_UK_PAYMENTSENSE.ini
+++ b/Payments/Driver/uk_paymentsense/PAY_UK_PAYMENTSENSE.ini
@@ -1,6 +1,9 @@
 ﻿OUT_PATH=.\output\
-USERNAME=acrelec
+USERNAME=Acrelec
 PASSWORD=8ffb32c4-8b29-428d-b5e8-896f7ca7890d
 USER_ACCOUNT_URL=https://st185l090000.test.connect.paymentsense.cloud
 CURRENCY=GBP
 TID=22163665
+MEDIATYPE=application/connect.v2+json
+INSTALLERID=ST185L09
+SOFTWAREHOUSEID=ST185L09
