--- a/Payments/Driver/uk_paymentsense/uk_paymentsense.csproj
+++ b/Payments/Driver/uk_paymentsense/uk_paymentsense.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{ABEA70DE-5A7A-4BB6-9C8C-FC605DA9E3EB}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Acrelec.Mockingbird.Payment</RootNamespace>
-    <AssemblyName>uk_paymentsense</AssemblyName>
+    <AssemblyName>PAY_UK_PAYMENTSENSE</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -20,7 +20,8 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>3</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -30,6 +31,12 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Acrelec.Mockingbird.Payment.Program</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>acrelec_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Acrelec.Library.Logger">
